methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:10: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
        return getGroundColor()
                             ^SlugTracking:3: error: type mismatch;
 found   : Unit
 required: Boolean
      if(!isFacingWall()){
      ^