methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
      if(!isFacingWall()){
        forward();
        return true;
 
      if(getGroundColor()!=Color.green){
        backward();
      }
        return getGroundColor()
        return isFacingWall()
    }
}
        
        
        
     
      